@@ -4,7 +4,8 @@ if not id then
 	warn('environment variable $SYSTEMD_INSTANCE not set')
 else
 	-- Bind to control socket in run_dir
-	local path = '@run_dir@/control/'..id
+	worker.control_path = '@run_dir@/control/'
+	local path = worker.control_path..id
 	local ok, err = pcall(net.listen, path, nil, { kind = 'control' })
 	if not ok then
 		warn('bind to '..path..' failed '..err)
